# To-do-App-hackhathone-2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/001-console-todo-app/: 1-create-console-todo-app-spec.spec.prompt.md  2-create-implementation-plan.plan.prompt.md  3-create-implementation-tasks.tasks.prompt.md
history/prompts/constitution/: 1-create-initial-constitution.constitution.prompt.md
history/prompts/general/: 001-resume-implementation.general.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
specs/001-console-todo-app/contracts/: service-contracts.md
src/todo_app/: __init__.py  cli.py  main.py  models.py  service.py  store.py  validators.py
