[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools"

[project]
name = "todo-app"
version = "0.1.0"
description = "A command-line todo application that stores tasks in memory"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
todo-app = "todo_app.main:main"

[tool.setuptools.packages.find]
where = ["src"]